--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 
-	<main class="container my-5 mx-auto">
-		<h2 class="text-center text-muted my-3">Weather App</h2>
+	<main class="container mx-auto">
+		<h2 class="text-center text-muted my-2">Weather App</h2>
 		<form class="form-control location my-3  border-0 text-center" style="background: transparent;">
 			<label for="city text-center">Enter a location</label><br>
 			<input type="text" name="city" placeholder="e.g Lagos" class="form-control">
@@ -18,18 +18,19 @@
 		<div class="card shadow-lg rounded d-none">
 			<img src="https://via.placeholder.com/400x300" class="time card-img-top">
 
-			<div class="icon bg-light mx-auto text-center">
+			<div class="icon bg-light mx-auto text-center shadow">
 				<!-- icon -->
+				<img src="" alt="weather-icon">
 			</div>
 
 			<div class="details text-muted text-center text-uppercase">
-				<h5 class="my-3">City Name</h5>
+				<h4 class="my-3">City Name</h4>
 
-				<h5 class="">02:50pm</h5>
+				<!-- <h5 class="">02:50pm</h5> -->
 
-				<div class="my-3">Weather condition</div>
+				<div class="my-2">Weather condition</div>
 
-				<div class="display-4 my-4">
+				<div class="display-4 my-3">
 					<span>temp</span>
 					<span>&deg;C</span>
 				</div>
@@ -40,9 +41,7 @@
 	</main>
 
 
-	
 	<script src="JS/forecast.js"></script>
 	<script src="JS/app.js"></script>
-	<script type="JS/time.js"></script>
 </body>
 </html>
